--- a/app/views/user/projects/helpers/_license_whitelist_picker.html.erb
+++ b/app/views/user/projects/helpers/_license_whitelist_picker.html.erb
@@ -15,8 +15,8 @@
       </select>
     </div>
     <button type="submit" class="btn btn-primary" >Save</button>
-    <% if !Rails.env.enterprise? %>
-      <button type="button" onclick="window.location.href='/settings/license_whitelists'" class="btn btn-success" >Manage License Whitelists</button>
+    <% if @project.organisation %>
+      <button type="button" onclick="window.location.href='/organisations/<%= @project.organisation.name %>/license_whitelists'" class="btn btn-success" >Manage License Whitelists</button>
     <% end %>
   </form>
   <br/>
