--- a/app/views/organisations/_navi.html.erb
+++ b/app/views/organisations/_navi.html.erb
@@ -16,9 +16,8 @@
           <li><%= link_to 'Profile', organisation_path(@organisation) %></li>
           <li><%= link_to 'Teams', organisation_teams_path(@organisation) %></li>
           <li><%= link_to 'License Whitelists', organisation_license_whitelists_path(@organisation) %></li>
+          <li><%= link_to 'Component Whitelists', organisation_component_whitelists_path(@organisation) %></li>
           <li><%= link_to 'Projects', projects_organisation_path(@organisation) %></li>
-          <!-- <li>License Whitelists</li>
-          <li>Component Whitelists</li> -->
         </ul>
       <% else %>
         <%= render '/shared/signup_ad' %>
