Show organisation in project detail view.

--- a/app/views/user/projects/show.html.erb
+++ b/app/views/user/projects/show.html.erb
@@ -63,9 +63,13 @@
         </div>
       <% end %>
 
-      <% if (current_user.nil? && @project.user) || ( @project.user && current_user && !@project.user.id.to_s.eql?(current_user.id.to_s) ) %>
+      <% if ( @project.organisation ) %>
         <div style="padding-top: 10px;">
-          <b>Created by:</b> <%= link_to @project.user.fullname, user_path(@project.user) %>
+          <b>Organisation:</b> <%= @project.organisation.name %>
+        </div>
+      <% elsif @project.user %>
+        <div style="padding-top: 10px;">
+          <b>Project owner:</b> <%= link_to @project.user.fullname, user_path(@project.user) %>
         </div>
       <% end %>
 
