--- a/app/views/user/projects/_project_settings.html.erb
+++ b/app/views/user/projects/_project_settings.html.erb
@@ -80,6 +80,40 @@
       <%= render "user/projects/helpers/component_whitelist_picker" %>
     <% end %>
 
+    <% if @project.user && @project.user.ids.eql?(current_user.ids) && @orgas && !@orgas.empty? %>
+      <form action="<%= transfer_user_project_path(@project) %>" method="post" class="form-inline" >
+        <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
+        <div>
+          Transfer ownership to an organisation.
+        </div>
+        <div class="form-group" class="form-control" >
+          <select name="orga_id" class="form-control" >
+            <% @orgas.each do |orga| %>
+              <option value="<%= orga.ids %>" ><%= orga.name %></option>
+            <% end %>
+          </select>
+        </div>
+        <button type="submit" class="btn btn-primary" >Transfer</button>
+      </form>
+    <% end %>
+
+    <% if @project.organisation && OrganisationService.owner?( @project.organisation, current_user ) %>
+      <form action="<%= team_user_project_path(@project) %>" method="post" class="form-inline" >
+        <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
+        <div>
+          Assign a team to the project. The team members will receive the email notifications and they are allowed to edit/update this project.
+        </div>
+        <div class="form-group" class="form-control" >
+          <select name="team_name" class="form-control" >
+            <% @project.organisation.teams.each do |team| %>
+              <option value="<%= team.name %>" <%= !@project.teams.empty? && @project.teams.first.name.eql?(team.name)  ? 'selected' : '' %> ><%= team.name %></option>
+            <% end %>
+          </select>
+        </div>
+        <button type="submit" class="btn btn-primary" >Transfer</button>
+      </form>
+    <% end %>
+
   </div>
 
   <% auditlogs = @project.auditlogs %>
