Refactor project filter. Make it inline.

--- a/app/views/user/projects/index.html.erb
+++ b/app/views/user/projects/index.html.erb
@@ -11,56 +11,25 @@
   </div>
 
   <div class="content" >
-    <div style="margin-bottom: 10px;">
-      <a id='projects_filter_link' onClick="show_project_filter(); return false;" href="" >
-        Show filter >>
-      </a>
-    </div>
-    <div id='projects_filter' style="display: none">
-      <form id="form" action="/user/projects" method="GET" class='form-horizontal' style="padding: 0; margin:0;" >
+    <div id='projects_filter' >
+      <form id="form" action="/user/projects" method="GET" class='form-inline' style="padding: 0; margin:0;" >
 
-        <div class="form-group">
-          <%= label_tag :name, "Project name", :class => "control-label", :for => "name" %>
-          <div class="controls">
-            <%= text_field_tag :name, params[:name], :id => "name", :class => 'form-control' %>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <%= label_tag :language, "Language", :class => "control-label", :for => "language" %>
-          <div class="controls" >
-            <select name="language"  id="language" class="form-control" >
-              <option value="ALL"  >ALL</option>
-              <% LanguageService.distinct_languages.sort.each do |language| %>
-                <option value="<%= language %>" <%= "selected" if params[:language].to_s.eql?(language) %> ><%= language %></option>
-              <% end %>
-            </select>
-          </div>
-        </div>
-
-        <% if Settings.instance.environment.eql?('enterprise') || signed_in_admin? %>
-          <div class="form-group">
-            <%= label_tag :scope, "Scope", :class => "control-label", :for => "scope" %>
-            <div class="controls" >
-              <select name="scope"  id="scope" class="form-control" >
-                <option value="user"  >My own projects</option>
-                <option value="all_public" <%= 'selected' if params[:scope].to_s.eql?('all_public') %> >All public projects</option>
-                <% if current_user.admin == true %>
-                  <option value="all" <%= 'selected' if params[:scope].to_s.eql?('all') %> >All projects</option>
-                <% end %>
-              </select>
-            </div>
-          </div>
-        <% end %>
-
-        <div class="form-group">
-          <div class="control-label"></div>
-          <div class="controls">
-            <button type="submit" class="btn btn-primary" >Filter</button>
-            <a id='projects_filter_link' onClick="hide_project_filter(); return false;" href="">
-              Hide filter
-            </a>
-          </div>
+        <div class="form-group" style="padding-bottom: 25px;">
+          <%= text_field_tag :name, params[:name], :id => "name", :class => 'form-control', :placeholder => 'project name' %>
+          <select name="language"  id="language" class="form-control" >
+            <option value="ALL"  >ALL</option>
+            <% LanguageService.distinct_languages.sort.each do |language| %>
+              <option value="<%= language %>" <%= "selected" if params[:language].to_s.eql?(language) %> ><%= language %></option>
+            <% end %>
+          </select>
+          <select name="scope"  id="scope" class="form-control" >
+            <option value="user"  >My own projects</option>
+            <option value="all_public" <%= 'selected' if params[:scope].to_s.eql?('all_public') %> >All public projects</option>
+            <% if current_user.admin == true %>
+              <option value="all" <%= 'selected' if params[:scope].to_s.eql?('all') %> >All projects</option>
+            <% end %>
+          </select>
+          <button type="submit" class="btn btn-primary" >Filter</button>
         </div>
 
       </form>
