--- a/app/views/user/projects/index.html.erb
+++ b/app/views/user/projects/index.html.erb
@@ -15,6 +15,12 @@
       <form id="form" action="/user/projects" method="GET" class='form-inline' style="padding: 0; margin:0;" >
 
         <div class="form-group" style="padding-bottom: 25px;">
+          <select name="organisation"  id="organisation" class="form-control" >
+            <option value=""  ><%= current_user.fullname %></option>
+            <% OrganisationService.index(current_user).each do |orga| %>
+              <option value="<%= orga.ids %>" <%= "selected" if params[:organisation].to_s.eql?(orga.ids) %> ><%= orga.name %></option>
+            <% end %>
+          </select>
           <%= text_field_tag :name, params[:name], :id => "name", :class => 'form-control', :placeholder => 'project name' %>
           <select name="language"  id="language" class="form-control" >
             <option value="ALL"  >ALL</option>
