--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -16,6 +16,7 @@
       By assigning a team to a project,
       all members of the team can see the project details,
       receive the project notification emails and they can modify/update the project with their own API key.
+      Points in team names are not allowed. Please use underscore instead of points.
     </p>
 
     <p>
@@ -23,10 +24,20 @@
       <%= form_for(:teams, :html => {:class => 'form-inline'} ) do |f|  %>
         <div class="form-group">
           <%= f.label :name, :class => 'control-label' %>
-          <%= f.text_field :name, :class => "form-control" %>
+          <%= f.text_field :name, :class => "form-control", :id => 'name' %>
           <button id="sign_in_button" type="submit" class="btn btn-big btn-primary" >Create New Team</button>
         </div>
       <% end %>
+      <script type="text/javascript">
+        $( "#name" ).keyup(function(e) {
+          if( this.value.indexOf('.') != -1 ){
+            this.value = this.value.replace(".", "")
+          }
+          if( this.value.indexOf(' ') != -1 ){
+            this.value = this.value.replace(" ", "")
+          }
+        });
+      </script>
     </p>
 
     <br/>
