--- a/app/views/organisations/projects.html.erb
+++ b/app/views/organisations/projects.html.erb
@@ -5,7 +5,7 @@
 <div class="col-md-9">
 
   <div class="content_header_def" >
-    Projects at <%= @organisation.name %>
+    <%= pluralize( @organisation.projects.count, "project" ) %> in this organisation (<%= @organisation.name %>)
   </div>
 
   <div class="content" >
