Add CoreOS page.

--- a/app/views/products/_product_show_github.html.erb
+++ b/app/views/products/_product_show_github.html.erb
@@ -5,6 +5,7 @@
 
 <div class="col-md-9 col-sm-8 content_head_top" >
   <%= render 'products/product_show_description' %>
+  <%= render 'products/product_show_scm_changelogs' %>
   <%= render 'products/product_show_downloads' %>
   <%= render 'products/product_show_comments' %>
   <%= render 'products/product_show_comment' %>
