--- a/app/views/user/projects/show.html.erb
+++ b/app/views/user/projects/show.html.erb
@@ -9,7 +9,11 @@
   <% title "#{@project.name}" %>
 
   <div class="col-md-3" >
-    <%= render "/user/helpers/navi" %>
+    <% if @organisation %>
+      <%= render "/organisations/navi" %>
+    <% else %>
+      <%= render "/user/helpers/navi" %>
+    <% end %>
   </div>
 
   <div class="col-md-9">
