--- a/app/assets/stylesheets/application_enterprise.css.scss
+++ b/app/assets/stylesheets/application_enterprise.css.scss
@@ -4,8 +4,10 @@
  * the top of the compiled file, but it's generally better to create a new file per style scope.
  *
  *= require bootstrap
- *= require font-awesome
 */
+
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 $gradient_start: #7F0200;
 $gradient_end: #610003;
@@ -20,14 +22,9 @@ $link_visited: #FDFDFD;
 $text_link:  #669acb;
 $text_hover: #a0b8cf;
 
-@import "bootstrap_upload.scss";
-@import "jasny-bootstrap.scss";
 @import "sprite.scss";
 @import "colorschema.scss";
 
-@import "typeahead.js-bootstrap.scss";
-
-@import "layout.scss";
 @import "base.scss";
 @import "well.scss";
 @import "search.scss";
@@ -35,11 +32,9 @@ $text_hover: #a0b8cf;
 @import "social_media_login.scss";
 @import "header.scss";
 @import "footer.scss";
+@import "landing_page.scss";
 
-@import "main.scss";
+@import "layout.scss";
 @import "social-buttons.scss";
-@import "product.scss";
-@import "user.scss";
-@import "plots.scss";
-@import "scm_app.scss";
-@import "pricing.scss"
+
+@import "enterprise.scss";
