--- a/app/views/user/projects/helpers/_project_mute_button.html.erb
+++ b/app/views/user/projects/helpers/_project_mute_button.html.erb
@@ -1,4 +1,4 @@
-<% if !signed_in? || dep.nil? || dep.unknown? || (signed_in? && !@project.is_collaborator?( current_user ) && !current_user.admin ) %>
+<% if !signed_in? || dep.nil? || dep.unknown? || (signed_in? && !current_user.admin && !@project.is_collaborator?( current_user ) ) %>
   <span>&nbsp;</span>
 <% elsif !dep.muted && dep.outdated %>
   <button id="<%= dep.id.to_s %>_button"
