Add option to login with public repo scope for GitHub.

--- a/app/assets/stylesheets/social_media_login.scss
+++ b/app/assets/stylesheets/social_media_login.scss
@@ -21,6 +21,14 @@
   line-height: 0;
 }
 
+.sml_list .sml_list_label{
+  list-style-type: none;
+  margin: 0;
+  width: 240px;
+  display: inline-table;
+  line-height: 0;
+}
+
 .sml_header{
   margin-top: -40px;
 }
