BugFix for CWL docu.

--- a/app/views/component_whitelists/show.html.erb
+++ b/app/views/component_whitelists/show.html.erb
@@ -31,6 +31,7 @@
     <p>
       To whitelist all artifacts in the `org.apache` group use this:
     </p>
+    <pre>org.apache</pre>
     <p>
       To whitelist non Java components use this pattern:
     </p>
