Adjust names for API KEY on Enterprise Agreement.

--- a/app/views/layouts/enterprise_activation.html.erb
+++ b/app/views/layouts/enterprise_activation.html.erb
@@ -33,7 +33,7 @@
             </div>
           </div>
         </div>
-        
+
         <div class="row">
           <div class="col-md-1"></div>
           <div class="col-md-11">
@@ -49,8 +49,8 @@
               <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
 
               <div style="padding-top: 10px" >
-                <label for="apikey" class="control-label">API Key: </label>
-                <input type="text" autocomplete="off" class="form-control" style="width: 300px; display: inline-block;" id="apikey" name="name" placeholder="API Key" />
+                <label for="api_key" class="control-label">API Key: </label>
+                <input type="text" autocomplete="off" class="form-control" style="width: 300px; display: inline-block;" id="api_key" name="api_key" placeholder="API Key" />
               </div>
 
               <div style="padding-top: 10px" >
@@ -63,16 +63,16 @@
               <div style="padding-top: 10px; padding-bottom: 20px;" >
                 <button type="submit" class="btn btn-primary btn-large" id="btn-signup">Activate</button>
               </div>
-              
+
             </form>
 
           </div>
         </div>
 
 
-        
 
-          
+
+
 
         </div>
 
