--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -5,11 +5,25 @@
 // the compiled file.
 //
 //= require jquery
+//= require jquery_ujs
 //= require jquery_textbox_hinter
 //= require bootstrap
+//= require jasny-bootstrap
+//= require libs/bootstrap-maxlength.min
+//= require libs/underscore-min
+
 //= require libs/hogan-2.0.0
 //= require libs/typeahead_0.9.3
 
-//= require google
+//= require libs/require
 
-//= require custom_lp
+<% if Settings.instance.environment.eql?('production') %>
+//= require google
+//= require gmap
+<% end %>
+
+//= require custom
+//= require custom_update_language
+
+//= require custom_language
+//= require linkifyjs
