--- a/app/assets/javascripts/application_lp.js.erb
+++ b/app/assets/javascripts/application_lp.js.erb
@@ -5,23 +5,13 @@
 // the compiled file.
 //
 //= require jquery
-//= require jquery_ujs
 //= require jquery_textbox_hinter
 //= require bootstrap
-//= require jasny-bootstrap
-//= require libs/bootstrap-maxlength.min
-//= require libs/underscore-min
-
 //= require libs/hogan-2.0.0
 //= require libs/typeahead_0.9.3
 
-//= require libs/require
-
+<% if Settings.instance.environment.eql?('production') %>
 //= require google
-//= require gmap
+<% end %>
 
-//= require custom
-//= require custom_update_language
-
-//= require custom_language
-//= require linkifyjs
+//= require custom_lp
